[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/bullets/laserGreen.png" type="Texture" id=1]
[ext_resource path="res://assets/bullets/laserGreenShot.png" type="Texture" id=2]
[ext_resource path="res://player/PlayerBullet.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fired",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hitted",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.80374
height = 23.4068

[node name="PlayerBullet" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fired"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.32867 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
